--- a/_posts/2025-02-02-test.md
+++ b/_posts/2025-02-02-test.md
@@ -1,15 +1,14 @@
 ---
 layout: remake
-title: Sine Intro 2
+title: Megademo 1
+group: North Star
 image: /assets/images/sine-intro-2.png
-group: Slipstream
-remake_coder: Shockwave
-original_coder: Andi
-original_musician: Codex
-original_gfx: Dan
-release_year: Unknown
-remake_year: 2009
-remake_rating: 9.4
+original_coder: 
+original_musician: 
+original_gfx: 
+release_year: 1988-03-31
+remake_coder: vtlmks
+remake_year: 2025
 platform: Amiga
 download_link: /assets/files/sine-intro-2.zip
 ---
