add ns_md screenshot

--- a/_posts/2025-02-02-test.md
+++ b/_posts/2025-02-02-test.md
@@ -2,7 +2,7 @@
 layout: remake
 title: Megademo 1
 group: North Star
-image: /assets/images/sine-intro-2.png
+image: /assets/images/ns_md1.png
 original_coder: 
 original_musician: 
 original_gfx: 
